Some fixed bugs, invisible gallery - client didn't provided pictures

--- a/style.sass
+++ b/style.sass
@@ -61,7 +61,7 @@ a
 	min-height: 60px
 	width: 100%
 	background-color: #ccc
-	z-index: 10
+	z-index: 2
 	
 	@media screen and (max-width: $middle)
 		position: fixed
@@ -176,13 +176,6 @@ a
 		color: #fff
 		background-color: $instagram
 
-#twitter 
-	color: $twitter
-	
-	&:hover
-		color: #fff
-		background-color: $twitter
-
 #pinterest 
 	color: $pinterest
 	
@@ -197,6 +190,7 @@ header
 	background-color: #eee
 	width: 100%
 	min-height: 100px
+	z-index: 1
 	
 	@media screen and (max-width: $big)
 		-webkit-box-pack: center
@@ -445,6 +439,7 @@ header
 	line-height: 0
 	margin-top: 50px
 	margin-bottom: 50px
+	opacity: 0.3
 	
 	@media screen and (max-width: $middle)
 		min-height: 100vw
@@ -465,6 +460,7 @@ header
 		img
 			width: 100%
 			height: 20vw
+			z-index: -1
 			
 			@media screen and (max-width: $middle)
 				width: 100%
@@ -479,7 +475,7 @@ header
 			position: relative
 			top: -20vw
 			text-align: center
-			z-index: 1
+			z-index: 0
 			
 			@media screen and (max-width: $middle)
 				display: none
@@ -505,6 +501,8 @@ header
 					font-size: 24px
 					line-height: 30px
 					outline: none
+					/* For testing time */
+					display: none
 					
 					@media screen and (max-width: $middle)
 						width: 60px
@@ -517,11 +515,13 @@ header
 						font-size: 34px
 						line-height: 40px
 						outline: none
+						
 
 .photo:nth-child(5), .photo:nth-child(6), .photo:nth-child(7), .photo:nth-child(8)
 		
 	@media screen and (max-width: $middle)
-		display: none		
+		display: none
+
 		
 /*Prices table*/
 
